<resources>
    <string name="add">Add</string>
    <string name="about_us">About Us</string>
    <string name="accept">Accept</string>
    <string name="account">Account</string>
    <string name="account_setting">Account Setting</string>
    <string name="account_settings">Account Settings</string>
    <string name="ad_manager">Ad Manager</string>
    <string name="advertised">Advertised</string>
    <string name="amount">Amount</string>
    <string name="app_name">Castcle V2</string>
    <string name="block_user">Block %s</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="cast_of">Cast of %s</string>
    <string name="cast">Cast</string>
    <string name="casts">Casts</string>
    <string name="cast_count">%s Cast</string>
    <string name="close">Close</string>
    <string name="copy_message">Copy message</string>
    <string name="confirm">Confirm</string>
    <string name="content_farming">Content Farming</string>
    <string name="continues">Continue</string>
    <string name="date">Date</string>
    <string name="docs">Docs</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="edit_page">Edit Page</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="none">None</string>
    <string name="castcle_id">Castcle ID</string>
    <string name="castcle_id_hit">\@Castcle_Official</string>
    <string name="display_name">Display name</string>
    <string name="display_name_hint">Display name</string>
    <string name="empty_state_content_title">Sorry, this cast isn\'t available</string>
    <string name="empty_state_content_description">This link you followed may be broken, or the cast may have been removed.</string>
    <string name="empty_feed_title">Trouble Loading News Feed</string>
    <string name="empty_state_profile_title">Sorry, this page or user isn\'t available</string>
    <string name="empty_state_profile_description">This link you followed may be broken, or the page/user may have been removed.</string>
    <string name="empty_search_title">We didn\'t find any results</string>
    <string name="empty_search_description">Make sure everything is spelled correctly or try different keywords.</string>
    <string name="error">Error</string>
    <string name="error_base">Something went wrong, Please try again later.</string>
    <string name="feed">Feed</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="for_you">For You</string>
    <string name="from">From</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_page">Delete Page</string>
    <string name="deposit">Deposit</string>
    <string name="dialog_recast_title">Choose Page or User</string>
    <string name="facebook">Facebook</string>
    <string name="fragment_account_title_1">Account Control</string>
    <string name="fragment_account_title_2">Link Social Media Account</string>
    <string name="fragment_change_password_title_1">Please enter your new password</string>
    <string name="fragment_change_password_title_2">Confirm password</string>
    <string name="fragment_change_password_title_3">Enter to confirm your password</string>
    <string name="fragment_change_password_title_4">Use at least 6 characters</string>
    <string name="fragment_change_password_title_5">Use both lowercase and uppercase letters</string>
    <string name="fragment_change_password_title_6">Password did not match</string>
    <string name="fragment_country_code_title_1">Select Country Code</string>
    <string name="fragment_create_page_option_title_1">Sync your social media page</string>
    <string name="fragment_create_page_option_title_2">Syncing your Castcle page with your social media account allows you to Cast your posts from another platform seamlessly</string>
    <string name="fragment_create_page_option_title_3">Sync your page with Facebook</string>
    <string name="fragment_create_page_option_title_4">Sync your page with Twitter</string>
    <string name="fragment_create_page_option_title_5">+ Create new page</string>
    <string name="fragment_delete_account_success_title_1">Back to home</string>
    <string name="fragment_delete_account_success_title_2">We\'ve successfully deleted your account.</string>
    <string name="fragment_delete_account_success_title_3">Your page has been permanently deleted.</string>
    <string name="fragment_forgot_password_title_1">Forgot password?</string>
    <string name="fragment_forgot_password_title_2">Enter your registered email address. We will send a verification code to your inbox</string>
    <string name="fragment_login_title_1">Welcome Back to Castcle</string>
    <string name="fragment_login_title_2">Login to continue</string>
    <string name="fragment_login_title_3">Enter your email address</string>
    <string name="fragment_login_title_4">Enter your password</string>
    <string name="fragment_login_title_5">Forgot password?</string>
    <string name="fragment_login_title_6">Login</string>
    <string name="fragment_login_title_7">Or continue with</string>
    <string name="fragment_login_title_8">Don’t have an account? <font color="#01D2FF">Sign up</font></string>
    <string name="fragment_register_email_title_1">Please enter you Email address</string>
    <string name="fragment_register_email_title_2">Your email address is required on this following section</string>
    <string name="fragment_register_mobile_title_1">Register mobile number</string>
    <string name="fragment_register_mobile_title_2">Please enter you country/mobile number to verify your account</string>
    <string name="fragment_register_mobile_title_3">Your mobile number</string>
    <string name="fragment_register_password_title_1">Request e-mail</string>
    <string name="fragment_register_password_title_2">Enter the e-mail associated with this account to request an OTP code</string>
    <string name="fragment_report_detail_message_hint">Write you message here…</string>
    <string name="fragment_report_detail_cast_title">Are there any additional issues with this Cast you want to report? Tell us more.</string>
    <string name="fragment_report_detail_user_title">Are there any additional issues with this User you want to report? Tell us more.</string>
    <string name="fragment_report_subject_footer">Get to know more about <u><font color="#01D2FF">Castcle Terms and Agreement</font></u></string>
    <string name="fragment_report_subject_header_cast">Why are you reporting this Cast?</string>
    <string name="fragment_report_subject_header_user">Why are you reporting this User?</string>
    <string name="fragment_report_success_title">Thank you for letting us know the issue.</string>
    <string name="fragment_report_success_description_cast">If this Cast violates Castcle Terms and Agreement, it will be removed.</string>
    <string name="fragment_report_success_description_user">If this User violates Castcle Terms and Agreement, it will be removed.</string>
    <string name="fragment_resent_verify_email_title_1">Haven\'t receive email yet.</string>
    <string name="fragment_resent_verify_email_title_2">Make sure that</string>
    <string name="fragment_resent_verify_email_title_3">1. Your email <![CDATA[&quot;<font color="#01D2FF">%s</font>&quot;]]> is correct and can be reached from the internet.</string>
    <string name="fragment_resent_verify_email_title_4">2. Please check your spam folder.</string>
    <string name="fragment_resent_verify_email_title_5">3. Your inbox is not full. Otherwise, delete some of your emails from your inbox before clicking the resend button.</string>
    <string name="fragment_resent_verify_email_title_6">Resend Email</string>
    <string name="fragment_setting_title_1">%s New notification</string>
    <string name="fragment_setting_title_2">Verify e-mail</string>
    <string name="fragment_setting_title_3">Please verify your e-mail</string>
    <string name="fragment_setting_title_4">Go to</string>
    <string name="fragment_setting_title_5">+ New Page</string>
    <string name="fragment_sync_social_title_1">Sync Social Media</string>
    <string name="fragment_sync_social_title_2">Synced</string>
    <string name="fragment_sync_social_detail_title_1">Sync with %s</string>
    <string name="fragment_sync_social_detail_title_2">Auto post</string>
    <string name="fragment_sync_social_detail_title_3">Your post on %s will automatically cast on Castcle.</string>
    <string name="fragment_sync_social_detail_title_4">Do You want to disconnect from %s?</string>
    <string name="fragment_sync_social_detail_title_5">Disconnect sync does not affect any of the information you have posted, and it will not affect your account. You can reconnect it at any time</string>
    <string name="fragment_sync_social_detail_title_6">Disconnect</string>
    <string name="fragment_sync_social_detail_title_7">Start Auto post on Castcle Profile</string>
    <string name="fragment_sync_social_detail_title_8">Your %s account %s is linked to your Castcle Page (%s). By continuing, your Twitter will no longer auto-post to (%s) and will now auto-post to your Castcle Profile</string>
    <string name="fragment_update_profile_success_title_1">Mobile number successfully verified</string>
    <string name="fragment_update_profile_success_title_2">You have successfully verified your mobile number with Castcle</string>
    <string name="fragment_update_profile_success_title_3">Password successfully changed</string>
    <string name="fragment_update_profile_success_title_4">Congratulations, you have successfully changed your password</string>
    <string name="fragment_update_profile_success_title_5">Login with Castcle</string>
    <string name="fragment_verify_otp_title_1">Didn’t receive code?</string>
    <string name="fragment_verify_otp_title_2"><![CDATA[<font color="#01D2FF">Request code again.</font>]]></string>
    <string name="fragment_verify_otp_title_3"><![CDATA[<font color="#707070">Request code again in %s.</font>]]></string>
    <string name="fragment_verify_otp_title_4">Verify your mobile number</string>
    <string name="fragment_verify_otp_title_5">You will receive a 6 digit code to verify your mobile number. OTP code will be sent to %s</string>
    <string name="fragment_verify_otp_title_6">Verify your E-mail</string>
    <string name="fragment_verify_otp_title_7">You will receive a 6 digit code to verify your e-mail. OTP code will be sent to %s</string>
    <string name="fragment_verify_otp_title_8">Enter verification code</string>
    <string name="fragment_verify_password_title_1">Please enter your current password</string>
    <string name="fragment_verify_password_title_2">You need to enter your current password before creating a new password</string>
    <string name="fragment_wallet_send_title_1">Send to</string>
    <string name="fragment_wallet_send_title_2">\@Castcle ID or Wallet Address</string>
    <string name="fragment_wallet_send_title_3">Memo (optional)</string>
    <string name="fragment_wallet_send_title_4">Enter Memo</string>
    <string name="fragment_wallet_send_title_5">Network fee 0 CAST</string>
    <string name="fragment_wallet_send_title_6">Enter your amount</string>
    <string name="fragment_wallet_send_title_7">Max</string>
    <string name="fragment_wallet_send_title_8">Current available balance: %s</string>
    <string name="fragment_wallet_send_title_9">Note</string>
    <string name="manage">Manage ></string>
    <string name="password">Password</string>
    <string name="shortcuts">Shortcuts</string>
</resources>