<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/black_background_1">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTitle"
        android:layout_width="@dimen/_76sdp"
        android:layout_height="@dimen/_76sdp"
        android:layout_marginTop="@dimen/_32sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_resent_verify_email" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Headline"
        android:id="@+id/tvTitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/fragment_resent_verify_email_title_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/fragment_resent_verify_email_title_2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvTitle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/fragment_resent_verify_email_title_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvTitle4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/fragment_resent_verify_email_title_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle3" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvTitle5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/fragment_resent_verify_email_title_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle4" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Regular"
        android:id="@+id/tvResendEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/bg_corner_24dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/fragment_resent_verify_email_title_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle5" />

</androidx.constraintlayout.widget.ConstraintLayout>