<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="@color/black_background_1">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvShortcutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:text="@string/shortcuts"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvManageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/manage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShortcutTitle"
        tools:listitem="@layout/item_wallet_send_shortcut" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvSendToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/fragment_wallet_send_title_1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.xSmall"
        android:id="@+id/tvSendTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_corner_16dp"
        android:backgroundTint="@color/black_background_2"
        android:hint="@string/fragment_wallet_send_title_2"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_48sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColorHint="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSendToTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivScanCastcleId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvSendTo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/tvSendTo"
        app:layout_constraintTop_toTopOf="@+id/tvSendTo"
        app:srcCompat="@drawable/ic_scan" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvMemoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/fragment_wallet_send_title_3"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSendTo" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/AppTextKanit.xSmall"
        android:id="@+id/etMemo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_corner_16dp"
        android:backgroundTint="@color/black_background_2"
        android:hint="@string/fragment_wallet_send_title_4"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColorHint="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMemoTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivScanMemoId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/etMemo"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/etMemo"
        app:layout_constraintTop_toTopOf="@+id/etMemo"
        app:srcCompat="@drawable/ic_scan" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvAmountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/fragment_wallet_send_title_5"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMemo" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/AppTextKanit.xSmall"
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_corner_16dp"
        android:backgroundTint="@color/black_background_2"
        android:hint="@string/fragment_wallet_send_title_6"
        android:inputType="numberDecimal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColorHint="@color/gray_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmountTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvMaxAmount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:text="@string/fragment_wallet_send_title_7"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/etAmount"
        app:layout_constraintEnd_toEndOf="@+id/etAmount"
        app:layout_constraintTop_toTopOf="@+id/etAmount" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.xxSmall"
        android:id="@+id/tvMaxBalance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/fragment_wallet_send_title_8"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxAmount" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTextKanit.Small"
        android:id="@+id/tvNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/fragment_wallet_send_title_9"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxBalance" />

    <androidx.appcompat.widget.AppCompatEditText
        style="@style/AppTextKanit.xSmall"
        android:id="@+id/etNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:background="@drawable/bg_corner_16dp"
        android:backgroundTint="@color/black_background_2"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLength="60"
        android:maxLines="3"
        android:minLines="3"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:textColorHint="@color/gray_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoteTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>